--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://emmadenton.github.io/Coding-portfolio/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
